--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "author": "Kelly Littlepage",
   "license": "ISC",
+  "dependencies": {
+    "jquery": "^3.2.1",
+    "d3": "^4.10.0"
+  },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel": "^6.5.2",
@@ -23,9 +27,9 @@
     "core-decorators": "^0.19.0",
     "critical": "^0.9.0",
     "css-loader": "^0.28.4",
-    "d3": "^4.10.0",
     "eslint": "^4.4.1",
-    "eslint-config-airbnb": "^15.1.0",
+    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
@@ -36,7 +40,6 @@
     "file-loader": "^0.11.2",
     "gulp": "^3.9.1",
     "imports-loader": "^0.7.1",
-    "jquery": "^3.2.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "node-sass": "^4.5.3",
