--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-react": "^7.2.0",
     "exports-loader": "^0.6.4",
     "expose-loader": "^0.7.3",
     "extract-text-webpack-plugin": "^3.0.0",
@@ -46,10 +46,12 @@
     "less-loader": "^4.0.5",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
+    "sass-lint": "^1.10.2",
     "sass-loader": "^6.0.6",
+    "sasslint-webpack-plugin": "^1.0.4",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "webpack": "^3.5.1",
-    "webpack-manifest-plugin": "^1.2.1"
+    "webpack": "^3.5.2",
+    "webpack-manifest-plugin": "^1.3.0"
   }
 }
