--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "^3.2.1",
-    "d3": "^4.10.0"
+    "d3": "^4.10.2"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "babel": "^6.5.2",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.1",
-    "babel-polyfill": "^6.23.0",
+    "autoprefixer": "^7.1.4",
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.0",
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "broken-link-checker": "^0.7.6",
     "clean-webpack-plugin": "^0.1.16",
-    "core-decorators": "^0.19.0",
-    "critical": "^0.9.0",
-    "css-loader": "^0.28.4",
-    "eslint": "^4.4.1",
-    "eslint-config-airbnb-base": "^11.3.1",
+    "core-decorators": "^0.20.0",
+    "critical": "^0.9.1",
+    "css-loader": "^0.28.7",
+    "eslint": "^4.7.1",
+    "eslint-config-airbnb-base": "^12.0.0",
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.2.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.3.0",
     "exports-loader": "^0.6.4",
     "expose-loader": "^0.7.3",
     "extract-text-webpack-plugin": "^3.0.0",
@@ -45,13 +45,14 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "node-sass": "^4.5.3",
+    "npm-check-updates": "^2.12.1",
     "postcss-loader": "^2.0.6",
-    "sass-lint": "^1.10.2",
+    "sass-lint": "^1.11.1",
     "sass-loader": "^6.0.6",
     "sasslint-webpack-plugin": "^1.0.4",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "webpack": "^3.5.2",
-    "webpack-manifest-plugin": "^1.3.0"
+    "webpack": "^3.6.0",
+    "webpack-manifest-plugin": "^1.3.2"
   }
 }
